--- a/multi-module/multi-module/build.gradle
+++ b/multi-module/multi-module/build.gradle
@@ -1,71 +1,72 @@
 plugins {
-	id 'java'
-	id 'org.springframework.boot' version '3.2.0'
-	id 'io.spring.dependency-management' version '1.1.4'
+    id 'java'
+    id 'org.springframework.boot' version '3.2.0'
+    id 'io.spring.dependency-management' version '1.1.4'
 }
 
 group = 'com.mh'
 version = '0.0.1-SNAPSHOT'
 
 java {
-	sourceCompatibility = '21'
+    sourceCompatibility = '21'
 }
 
 configurations {
-	compileOnly {
-		extendsFrom annotationProcessor
-	}
+    compileOnly {
+        extendsFrom annotationProcessor
+    }
 }
 
 repositories {
-	mavenCentral()
+    mavenCentral()
 }
 
 dependencies {
-	implementation 'org.springframework.boot:spring-boot-starter'
-	compileOnly 'org.projectlombok:lombok'
-	annotationProcessor 'org.projectlombok:lombok'
-	testImplementation 'org.springframework.boot:spring-boot-starter-test'
+    implementation 'org.springframework.boot:spring-boot-starter'
+    compileOnly 'org.projectlombok:lombok'
+    annotationProcessor 'org.projectlombok:lombok'
+    testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
 
 tasks.named('test') {
-	useJUnitPlatform()
+    useJUnitPlatform()
 }
 
 // 하위 모든 프로젝트 공통 세팅
 subprojects {
-	apply plugin: 'java'
-	apply plugin: 'idea'
-	apply plugin: 'org.springframework.boot'
-	apply plugin: 'io.spring.dependency-management'
+    apply plugin: 'java'
+    apply plugin: 'idea'
+    apply plugin: 'org.springframework.boot'
+    apply plugin: 'io.spring.dependency-management'
 
-	group 'org.example'
-	version '1.0-SNAPSHOT'
+    group 'org.example'
+    version '1.0-SNAPSHOT'
 
-	sourceCompatibility = '21'
-	targetCompatibility = '21'
-	compileJava.options.encoding = 'UTF-8'
+    sourceCompatibility = '21'
+    targetCompatibility = '21'
+    compileJava.options.encoding = 'UTF-8'
 
-	repositories {
-		mavenCentral()
-	}
+    repositories {
+        mavenCentral()
+    }
 
-	// 하위 모듈에서 공통으로 사용하는 세팅 추가
-	dependencies {
-		compileOnly 'org.projectlombok:lombok'
+    // 하위 모듈에서 공통으로 사용하는 세팅 추가
+    dependencies {
+        compileOnly 'org.projectlombok:lombok'
+        implementation 'org.springframework.boot:spring-boot-starter-web'
 
-		annotationProcessor 'org.projectlombok:lombok'
-		annotationProcessor "org.springframework.boot:spring-boot-configuration-processor"
+        annotationProcessor 'org.projectlombok:lombok'
+        annotationProcessor "org.springframework.boot:spring-boot-configuration-processor"
 
 //		testImplementation 'org.junit.jupiter:junit-jupiter-api:5'
 //		testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.7.0'
-	}
+    }
 
-	test {
-		useJUnitPlatform()
-	}
+    test {
+        useJUnitPlatform()
+    }
 
 
-	tasks.bootJar { enabled = false }
-	tasks.jar { enabled = true }
+    tasks.bootJar { enabled = false }
+    tasks.jar { enabled = true }
 }
