--- a/batch-module/build.gradle
+++ b/batch-module/build.gradle
@@ -10,10 +10,15 @@ repositories {
 }
 
 dependencies {
-    
+
     testImplementation platform('org.junit:junit-bom:5.9.1')
     testImplementation 'org.junit.jupiter:junit-jupiter'
     implementation project(':core-module')
+    implementation 'org.springframework.boot:spring-boot-starter-batch'
+    implementation 'org.springframework.boot:spring-boot-starter-jdbc'
+    runtimeOnly 'com.h2database:h2'
+    testImplementation 'org.springframework.batch:spring-batch-test'
+
 }
 
 test {
